@@ -1,5 +1,10 @@
 2008-01-14  Alexander Larsson  <alexl@redhat.com>
 
+        * daemon/gvfsdaemon.c:
+	Don't translate g_warning strings
+
+2008-01-14  Alexander Larsson  <alexl@redhat.com>
+
         * client/httpuri.c:
         (http_from_uri):
 	Only set "ssl" key in dav case.
